--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -97,12 +97,20 @@
       font: 500 18px/24px $fontMain;
       color: $background;
       text-align: center;
+      span {
+        &.error {
+          color: #a81d30;
+        }
+      }
     }
 
     .btn-bock {
       width: 100%;
       height: 44px;
       margin: 40px auto;
+      .button {
+        margin: 0 auto;
+      }
     }
 
     h3.made-by {
