--- a/ui/src/assets/styles/common.scss
+++ b/ui/src/assets/styles/common.scss
@@ -29,7 +29,7 @@ body {
   flex-shrink: 0;
   width: 180px;
   height: 44px;
-  margin: 0 auto;
+  margin: 0;
   padding: 8px 20px;
   background: $background;
   outline: none;
