--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -57,6 +57,7 @@
           height: 2px;
           top: 50%;
           left: 50%;
+          margin-left: -15px;
           border-radius: 2px;
           background: lighten($dark, 10%);
 
