--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -43,9 +43,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      padding-top: 118px;
+      width: 100vw;
+      height: 100vh;
+      padding: 118px 0 60px;
 
       .pixies {
         display: flex;
@@ -54,6 +54,7 @@
         flex-wrap: wrap;
         width: 100%;
         height: 100%;
+        overflow: hidden auto;
 
         .pix {
           width: 20%;
