--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -16,16 +16,14 @@
       download it all like one ZIP file</span>
       <span *ngIf="state === StateEnum.success">Successfully authorized! <br>Transition to stocks...</span>
       <span *ngIf="state === StateEnum.loading">Loading...</span>
-      <span *ngIf="state === StateEnum.error" class="error">ERROR</span>
+      <span *ngIf="state === StateEnum.error">ERROR</span>
     </h2>
 
     <div class="btn-bock">
-      <div class="button login" *ngIf="state === StateEnum.auth" (click)="loginVk()">
-        <div class="btn-label">Login with</div>
+      <div class="button login" *ngIf="(state === StateEnum.auth) || (state === StateEnum.error)" (click)="loginVk()">
+        <div class="btn-label" *ngIf="state === StateEnum.auth">Login with</div>
+        <div class="btn-label" *ngIf="state === StateEnum.error">Login again</div>
         <div class="btn-logo logo-vk"></div>
-      </div>
-      <div class="button show-login" *ngIf="state === StateEnum.error" (click)="showLogin()">
-        <div class="btn-label">Go to auth</div>
       </div>
     </div>
 
