--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -52,6 +52,7 @@
       position: absolute;
       bottom: 40px;
       padding: 0 20px;
+
       .button {
         margin: 0 auto;
         width: 100%;
@@ -89,6 +90,7 @@
         &.col-100-per {
           width: 100%;
         }
+
         &.col-50-per {
           width: 50%;
         }
@@ -134,69 +136,93 @@
         width: 100%;
       }
 
-      .radio {
-        position: relative;
-        height: 20px;
-        width: 100%;
-
-        input[type=radio] {
-          display: none;
-        }
-
-        label {
-          cursor: pointer;
-          position: absolute;
-          display: inline-block;
+      .input {
+        .radio {
+          position: relative;
+          height: 20px;
           width: 100%;
-          height: 100%;
-          left: 0;
-          bottom: 0;
-          padding-left: 32px;
-          font: 400 14px/32px $fontMain;
-          color: $background;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
+
+          input[type=radio] {
+            display: none;
+          }
+
+          label {
+            cursor: pointer;
+            position: absolute;
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            bottom: 0;
+            padding-left: 32px;
+            font: 400 14px/32px $fontMain;
+            color: $background;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+          }
+
+          label::before,
+          label::after {
+            position: absolute;
+            display: block;
+            box-sizing: border-box;
+            content: "";
+          }
+
+          label::before {
+            height: 22px;
+            width: 22px;
+            left: 0;
+            top: 5px;
+            border-radius: 16px;
+            border: 2px solid $background;
+            box-shadow: 2px 2px 0 0px #1d1d1d;
+          }
+
+          label::after {
+            transition: transform .2s ease-in-out;
+            content: "";
+            height: 8px;
+            width: 8px;
+            left: 7px;
+            top: 50%;
+            margin-top: 2px;
+            border-radius: 8px;
+            background: $background;
+            box-shadow: 2px 2px 0 0px #1d1d1d;
+          }
+
+          input[type=radio] + label::after {
+            transform: scale(0);
+          }
+
+          input[type=radio]:checked + label::after {
+            transform: scale(1);
+          }
         }
 
-        label::before,
-        label::after {
-          position: absolute;
-          display: block;
-          box-sizing: border-box;
-          content: "";
-        }
-
-        label::before {
-          height: 22px;
-          width: 22px;
-          left: 0;
-          top: 5px;
-          border-radius: 16px;
-          border: 2px solid $background;
-          box-shadow: 2px 2px 0 0px #1d1d1d;
-        }
-
-        label::after {
-          transition: transform .2s ease-in-out;
-          content: "";
-          height: 8px;
-          width: 8px;
-          left: 7px;
-          top: 50%;
-          margin-top: 2px;
-          border-radius: 8px;
-          background: $background;
-          box-shadow: 2px 2px 0 0px #1d1d1d;
-        }
-
-        input[type=radio] + label::after {
-          transform: scale(0);
-        }
-
-        input[type=radio]:checked + label::after {
-          transform: scale(1);
+        .text {
+          width: 100%;
+          input[type=text] {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex-shrink: 0;
+            width: 100%;
+            height: 44px;
+            margin: 0;
+            padding: 8px;
+            background: $background;
+            outline: none;
+            font: 500 16px/18px $fontMain;
+            text-decoration: none;
+            text-align: center;
+            color: $dark;
+            border: 2px solid $background;
+            border-radius: 8px;
+            box-shadow: 2px 2px 0 0 #1d1d1d;
+          }
         }
       }
 
