UI vk save & like testing

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -127,7 +127,8 @@
           <span class="done"></span>
         </div>
         <div class="sub-title" *ngIf="!user.vkTokenIF">
-          <span>Push the button, copy URL from the browser address bar,
+          <span>
+            Push the button, copy URL from the browser's address bar,
             return back to this page and paste at the form below.
           </span>
         </div>
