--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -14,16 +14,31 @@
     background: #252525;
 
     .pix {
+      position: relative;
+      overflow: hidden;
       width: 100%;
       height: 100%;
       border-radius: 20px;
-      overflow: hidden;
 
       img {
         width: 100%;
         height: 100%;
         object-fit: scale-down;
         object-position: 50%;
+      }
+
+      .message {
+        position: absolute;
+        user-select: none;
+        width: 280px;
+        top: 20px;
+        left: 50%;
+        margin-left: -140px;
+        padding: 5px 10px;
+        background: $background;
+        border-radius: 8px;
+        font: 500 14px/20px $fontMain;
+        color: #cacaca;
       }
 
       .close {
