--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -38,6 +38,7 @@
         background: $background;
         border-radius: 8px;
         font: 500 14px/20px $fontMain;
+        text-align: center;
         color: #cacaca;
       }
 
