UI vk save & like testing

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -2,7 +2,9 @@
   <div class="fullScreen">
     <div class="pix">
       <img src="{{href}}" alt=""/>
-      <div class="message" *ngIf="message">{{messageText}}</div>
+      <div class="panel-top">
+        <div class="message" *ngIf="message">{{messageText}}</div>
+      </div>
       <div class="slide left"
            *ngIf="controlsViewed"
            (click)="slide('left')"
