--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -132,8 +132,10 @@
       }
 
       .button {
-        margin: 20px auto 0;
         width: 100%;
+        margin: 20px auto 0;
+        background: #1d1d1d;
+        box-shadow: 2px 2px 6px 0 #1d1d1d;
       }
 
       .input {
@@ -215,13 +217,16 @@
             padding: 8px;
             background: transparent;
             outline: none;
-            font: 500 16px/18px $fontMain;
+            font: 400 14px/18px $fontMain;
             text-decoration: none;
             text-align: center;
             color: $background;
-            border: 2px solid $background;
+            border: none;
             border-radius: 8px;
-            box-shadow: 2px 2px 0 0 #1d1d1d;
+            box-shadow: inset 2px 2px 10px 0 #1d1d1d;
+            &::placeholder {
+              color: $background;
+            }
           }
         }
       }
