--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -135,6 +135,7 @@
         width: 100%;
         margin: 20px auto 0;
         background: #1d1d1d;
+        border: none;
         box-shadow: 2px 2px 6px 0 #1d1d1d;
       }
 
