--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -104,6 +104,21 @@
       margin: 40px auto;
       .button {
         margin: 0 auto;
+        background: #1d1d1d;
+        border: none;
+        box-shadow: 2px 2px 6px 0 #1d1d1d;
+        .btn-label {
+          color: $background;
+        }
+        .log-vk {
+          color: $background;
+        }
+        &:hover, &.active {
+          background: lighten($background, 10%);
+          .logo-vk {
+            background-color: lighten(#1d1d1d, 10%);
+          }
+        }
       }
     }
 
