--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -15,50 +15,6 @@
     margin-top: 40px;
     width: 100%;
 
-    &:first-child {
-      margin-top: 0;
-    }
-
-    &.user {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      flex-direction: column;
-      position: relative;
-
-      .user-avatar {
-        display: block;
-        width: 66px;
-        height: 66px;
-        border-radius: 33px;
-        overflow: hidden;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-
-      .user-name {
-        margin-top: 20px;
-        font: 400 18px/20px $fontMain;
-        text-align: center;
-        color: $background;
-      }
-    }
-
-    &.logout {
-      position: absolute;
-      bottom: 40px;
-      padding: 0 20px;
-
-      .button {
-        margin: 0 auto;
-        width: 100%;
-      }
-    }
-
     .title {
       display: flex;
       justify-content: flex-start;
@@ -232,6 +188,53 @@
         }
       }
 
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &.user {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: column;
+      position: relative;
+
+      .user-avatar {
+        display: block;
+        width: 66px;
+        height: 66px;
+        border-radius: 33px;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .user-name {
+        margin-top: 20px;
+        font: 400 18px/20px $fontMain;
+        text-align: center;
+        color: $background;
+      }
+    }
+
+    &.logout {
+      position: absolute;
+      bottom: 40px;
+      padding: 0 20px;
+
+      .button {
+        margin: 0 auto;
+        width: 100%;
+        background: #1d1d1d;
+        border: none;
+        box-shadow: 2px 2px 6px 0 #1d1d1d;
+      }
     }
   }
 }
