--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -167,6 +167,8 @@
           input[type=text] {
             overflow: hidden;
             text-overflow: ellipsis;
+            -webkit-appearance: none;
+            appearance: none;
             flex-shrink: 0;
             width: 100%;
             height: 44px;
