--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -102,7 +102,7 @@
     <div class="box-col">
       <div class="col col-100-per">
         <div class="row">
-          <div class="button stroke login" (click)="refreshUsers()">
+          <div class="button login" (click)="refreshUsers()">
             <div class="btn-label">Refresh users</div>
             <div class="btn-logo logo-reload"></div>
           </div>
@@ -134,7 +134,7 @@
           </span>
         </div>
         <div class="row">
-          <div class="button stroke" (click)="requestRights()">
+          <div class="button" (click)="requestRights()">
             <div class="btn-label">Rights request</div>
             <div class="btn-logo logo-key"></div>
           </div>
@@ -152,7 +152,7 @@
   </div>
 
   <div class="block logout">
-    <div class="button stroke login" (click)="logout()">
+    <div class="button login" (click)="logout()">
       <div class="btn-label">Logout</div>
       <div class="btn-logo logo-logout"></div>
     </div>
