--- a/ui/src/assets/styles/common.scss
+++ b/ui/src/assets/styles/common.scss
@@ -31,35 +31,18 @@ body {
   height: 44px;
   margin: 0;
   padding: 8px 20px;
-  background: $background;
   outline: none;
   border-radius: 8px;
   cursor: pointer;
   user-select: none;
   text-decoration: none;
   transition: background 100ms ease;
-  box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
+  border: none;
+  background: #1d1d1d;
+  box-shadow: 2px 2px 6px 0 #1d1d1d;
 
   &:hover, &.active {
-    background: lighten($dark, 10%);
-    .logo-vk {
-      background-color: #1b1b1b;
-    }
-  }
-
-  &.stroke {
-    background: transparent;
-    border: 2px solid $background;
-    box-shadow: 2px 2px 0 0 #1d1d1d;
-    .btn-label {
-      color: $background;
-    }
-    .btn-logo {
-      background-color: $background;
-    }
-    &:hover, &.active {
-      background: lighten($dark, 3%);
-    }
+    background: #212121;
   }
 
   .btn-logo {
@@ -119,22 +102,6 @@ body {
   .btn-label {
     font: 500 16px/18px $fontMain;
     text-align: center;
-    color: $dark;
-  }
-
-  &.bottomed {
-    opacity: .94;
-    position: fixed;
-    bottom: 40px;
-    left: 50%;
-    margin-left: -90px;
-  }
-
-  a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    color: $background;
   }
 }
