--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -20,6 +20,10 @@
     </h2>
 
     <div class="btn-block">
+      <div class="button login">
+        <div class="btn-label">Group</div>
+        <a href="https://vk.com/pixcollector" target="_blank" rel="noopener noreferrer"> </a>
+      </div>
       <div class="button login" *ngIf="(state === StateEnum.auth) || (state === StateEnum.error)" (click)="loginVk()">
         <div class="btn-label" *ngIf="state === StateEnum.auth">Login with</div>
         <div class="btn-label" *ngIf="state === StateEnum.error">Login again</div>
