--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -36,8 +36,8 @@
         opacity: .42;
         position: absolute;
         left: 50%;
-        margin-left: -75px;
-        bottom: -25px;
+        margin-left: -70px;
+        bottom: 0;
         width: 150px;
         height: 27%;
         background: url("../../../assets/images/logo-juice.svg");
@@ -99,11 +99,17 @@
     }
 
     .btn-block {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 100%;
       height: 44px;
       margin: 40px auto;
       .button {
-        margin: 0 auto;
+        &:first-child {
+          margin-right: 20px;
+          width: 80px;
+        }
       }
     }
 
@@ -171,7 +177,7 @@
         }
 
         .juice {
-          bottom: -15px;
+          bottom: 0;
         }
 
         h1.title {
