--- a/ui/src/assets/styles/common.scss
+++ b/ui/src/assets/styles/common.scss
@@ -45,6 +45,25 @@ body {
     background: #212121;
   }
 
+  a {
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+  }
+
+  .btn-label {
+    font: 500 16px/18px $fontMain;
+    text-align: center;
+    color: $background;
+  }
+
   .btn-logo {
     background-color: $background;
     &.logo-vk {
@@ -99,9 +118,4 @@ body {
     }
   }
 
-  .btn-label {
-    font: 500 16px/18px $fontMain;
-    text-align: center;
-    color: $background;
-  }
 }
