--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -219,7 +219,6 @@
               margin: 0;
               height: 40px;
               width: 40px;
-              box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
               .label {
                 font-size: 14px;
               }
@@ -231,6 +230,7 @@
             align-items: center;
             width: 240px;
             font: 500 14px/18px $fontMain;
+            text-shadow: 1px 1px 2px #1d1d1d;
             color: $background;
             .btn-page {
               position: relative;
@@ -241,7 +241,6 @@
               flex-shrink: 0;
               width: 30px;
               height: 30px;
-              background: #4D4D4D;
               padding: 0;
               margin: 0 5px;
               outline: none;
@@ -250,10 +249,11 @@
               cursor: pointer;
               text-decoration: none;
               transition: background 100ms ease;
-              box-shadow: -2px -6px 10px rgba(232, 237, 243, 0.05), 2px 12px 64px #4B4B4B, inset -2px -6px 10px rgba(248, 249, 249, 0.03);
+              background: #1d1d1d;
+              box-shadow: 2px 2px 6px 0 #1d1d1d;
               font: 500 14px/18px $fontMain;
               text-align: center;
-              color: $dark;
+              color: $background;
               span.icon {
                 display: block;
                 position: relative;
@@ -316,6 +316,8 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            background: #1d1d1d;
+            box-shadow: 2px 2px 6px 0 #1d1d1d;
             .select {
               position: relative;
               right: -5px;
