--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -125,6 +125,15 @@
         }
       }
 
+      .touch-ui {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+      }
+
       .panel-bot {
         display: flex;
         align-items: center;
