--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -133,8 +133,8 @@
             left: 0;
             top: 5px;
             border-radius: 16px;
-            border: 2px solid $background;
-            box-shadow: 2px 2px 0 0px #1d1d1d;
+            border: 2px solid #1d1d1d;
+            box-shadow: 2px 2px 6px 0 #1d1d1d;
           }
 
           label::after {
@@ -146,8 +146,8 @@
             top: 50%;
             margin-top: 2px;
             border-radius: 8px;
-            background: $background;
-            box-shadow: 2px 2px 0 0px #1d1d1d;
+            background: #1d1d1d;
+            box-shadow: 2px 2px 6px 0 #1d1d1d;
           }
 
           input[type=radio] + label::after {
