UI add hummerjs, touch gestures test

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -25,8 +25,7 @@
       </div>
       <div class="touch-ui"
            *ngIf="touchDevise"
-           (swipeleft)="swipe($event.type)"
-           (swiperight)="swipe($event.type)"
+           (swipe)="swipe($event)"
       >
       </div>
       <div class="close"
