--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -104,7 +104,7 @@
       align-items: center;
       width: 100%;
       height: 44px;
-      margin: 40px auto;
+      margin: 40px auto 40px;
       .button {
         &:first-child {
           margin-right: 20px;
