--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -110,6 +110,12 @@
           margin-right: 20px;
           width: 80px;
         }
+        &.off-first-child {
+          &:first-child {
+            margin-right: 0;
+            width: 180px;
+          }
+        }
       }
     }
 
