UI add hummerjs, touch gestures test

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -25,7 +25,8 @@
       </div>
       <div class="touch-ui"
            *ngIf="touchDevise"
-           (swipe)="swipe($event)"
+           (swipeleft)="swipe($event)"
+           (swiperight)="swipe($event)"
       >
       </div>
       <div class="close"
