UI add hummerjs, touch gestures test

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -128,14 +128,14 @@
         </div>
         <div class="sub-title" *ngIf="!user.VKTIFSAExists">
           <span>
-            Push the button, copy URL from the browser's address bar,
+            Push the button "Request access", copy URL from the browser's address bar,
             return back to this page and paste at the form below
-            (New features will appear in the viewer).
+            (New features will appear in the viewer)..
           </span>
         </div>
         <div class="row">
           <div class="button" (click)="requestRights()">
-            <div class="btn-label">Rights request</div>
+            <div class="btn-label">Request access</div>
             <div class="btn-logo logo-key"></div>
           </div>
         </div>
