UI add hummerjs, touch gestures test

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -130,7 +130,7 @@
           <span>
             Push the button "Request access", copy URL from the browser's address bar,
             return back to this page and paste at the form below
-            (New features will appear in the viewer)..
+            (New features will appear in the viewer).
           </span>
         </div>
         <div class="row">
