UI add hummerjs, touch gestures test, stock fixes

--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -442,6 +442,10 @@
           text-align: center;
           color: $background;
         }
+
+        .button {
+          margin-top: 40px;
+        }
       }
     }
   }
