--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -27,6 +27,7 @@
            *ngIf="touchDevise"
            (swipeleft)="swipe($event)"
            (swiperight)="swipe($event)"
+           (swipeup)="swipe($event)"
       >
       </div>
       <div class="close"
