--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -108,7 +108,7 @@
           <div class="download" *ngIf="allowDownload">
             <a class="select" [ngClass]="{active:selectMode}" (click)="selectClickHandler()"></a>
           </div>
-          <div *ngIf="!allowDownload"> </div>
+          <div *ngIf="!allowDownload" style="height: 40px; width: 40px;"> </div>
         </div>
       </div>
     </div>
