UI add hummerjs, touch gestures test, stock fixes

--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -28,6 +28,7 @@
            (swipeleft)="swipe($event)"
            (swiperight)="swipe($event)"
            (swipeup)="swipe($event)"
+           (swipedown)="swipe($event)"
       >
       </div>
       <div class="close"
