--- a/ui/src/app/components/shared/viewer/viewer.component.scss
+++ b/ui/src/app/components/shared/viewer/viewer.component.scss
@@ -85,7 +85,7 @@
           left: 50%;
           margin-left: -15px;
           border-radius: 2px;
-          background: lighten($dark, 10%);
+          background: #1d1d1d;
 
           &:nth-child(1) {
             transform: rotate(45deg);
